objects/ICR_History__c.object
<CustomObject>
    <fields>
        <fullName>Work_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Open_Approval_Requests__c</fullName>
        <label># of Open Approval Requests</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Open_Pending_Corrections__c</fullName>
        <label># Open Pending Corrections</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ICR History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ICR History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICR History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>